# email-body-extractor

./: .dockerignore  .env.example  .flake8  .gitignore  Dockerfile  Dockerfile.web  LICENSE  README.md  docker-compose.yml  pyproject.toml  requirements.txt
docs/: api.md  architecture.md  configuration.md  development.md
src/app/: main.py
src/app/api/: router.py
src/app/api/v1/: routes.py
src/app/common/: exceptions.py  logging_config.py  preprocessing.py
src/app/config/: settings.py
src/app/llm_flow/: agents.py  workflow.py
src/app/models/: schemas.py
src/app/non_llm/: base.py  confidence_scorer.py  disclaimer_remover.py  pipeline.py  reply_remover.py  signature_remover.py
src/app/providers/: anthropic_provider.py  azure_openai_provider.py  base.py  factory.py  gemini_provider.py  openai_provider.py
src/app/router/: extraction_router.py
src/app/services/: extraction_service.py  history_service.py
src/web/: main.py
tests/: conftest.py  test_agents.py  test_api.py  test_history_service.py  test_non_llm_pipeline.py  test_preprocessing.py  test_providers.py  test_schemas.py  test_settings.py
tests/samples/: __init__.py
tests/samples/edge_cases/: long_email.txt  only_signature.txt  unicode_content.txt  windows_line_endings.txt
tests/samples/eml/: html_only.eml  multipart.eml  plain_text.eml
tests/samples/html/: gmail_quoted.html  outlook_forward.html  simple.html  with_scripts_styles.html
tests/samples/plain_text/: apple_mail_reply.txt  full_thread.txt  gmail_reply.txt  multi_level_reply.txt  outlook_reply.txt  sent_from_device.txt  simple_message.txt  with_confidentiality_notice.txt  with_disclaimer.txt  with_signature_closing.txt  with_signature_dash.txt
