[project]
name = "email-body-extractor"
description = "Extract the latest message from email threads, strips quoted history, signatures, disclaimers, and forwarded blocks. Handles plain text, HTML, Gmail & Outlook threading."
dynamic = ["version"]
authors = [{ name = "Deepak Mahto", email = "deepak1202mah@gmail.com" }]
license = "MIT License"
readme = "README.md"
requires-python = ">=3.10,<3.11"
dependencies = [
    'beautifulsoup4 (==4.14.3)',
    'email-reply-parser (==0.5.12)',
    'fastapi (==0.136.1)',
    'httpx (==0.28.1)',
    'langgraph (==1.2.0)',
    'lxml (==6.1.0)',
    'openai (==2.36.0)',
    'pydantic (==2.13.4)',
    'pydantic-settings (==2.14.1)',
    'python-dotenv (==1.2.2)',
    'streamlit (==1.57.0)',
    'talon (==1.4.4)',
    'tenacity (==9.1.4)',
    'typing-extensions (==4.15.0)',
    'uvicorn[standard] (==0.47.0)',
]

[tool.poetry]
version = "1.0.0"
packages = [
    { include = "app", from = "src" },
]
requires-poetry = '>=2.0.0,<3.0.0'

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    'pytest (==9.0.3)',
    'pytest-asyncio (==1.3.0)',
    'pytest-cov (==7.1.0)',
    'ruff (==0.15.13)',
    'mypy (==2.1.0)',
    'black (==26.3.1)',
    'isort (==8.0.1)',
    'flake8 (==7.3.0)',
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
markers = [
    "live: tests that hit the real OpenAI API (costs tokens, skipped by default)",
]
addopts = "-ra --strict-markers -m 'not live'"

[tool.ruff]
line-length = 120
target-version = "py310"
respect-gitignore = true

[tool.black]
line-length = 120
target-version = ["py310"]

[tool.isort]
profile = "black"
line_length = 120
src_paths = ["src"]

[tool.mypy]
python_version = "3.10"
strict = true
mypy_path = "src"

[[tool.mypy.overrides]]
module = ["talon.*", "email_reply_parser.*", "google.generativeai.*", "google.*"]
ignore_missing_imports = true
